# RPVA

./: .env.example  .gitignore  CLAUDE.md  README.md  ara-developer-tools-section.md  ara-prd.md  ara-voice-assistant-pi4-setup.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
config/: base.yaml  dev.yaml  prod.yaml
docker/: docker-compose.yml
docs/: TTS_Comparison_Report.docx  conversation-flow.md  voice-commands.md
scripts/: benchmark.py  daily_summary.py  download_models.sh  generate_test_audio.py  setup.sh
specs/001-ara-voice-assistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ara-voice-assistant/checklists/: requirements.md
specs/001-ara-voice-assistant/contracts/: internal-api.md
specs/002-personality-timers/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-personality-timers/checklists/: requirements.md
specs/002-personality-timers/contracts/: voice-commands.md
specs/003-timer-countdown/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-timer-countdown/checklists/: requirements.md
specs/003-timer-countdown/contracts/: voice-commands.md
specs/004-mongodb-data-store/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-mongodb-data-store/checklists/: requirements.md
specs/004-mongodb-data-store/contracts/: __init__.py  storage.py
specs/005-time-tracking-notes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-time-tracking-notes/checklists/: requirements.md
specs/005-time-tracking-notes/contracts/: activity_service.py  digest_service.py  note_service.py
specs/006-smart-query-routing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-smart-query-routing/checklists/: requirements.md
specs/006-smart-query-routing/contracts/: query_router.py
specs/007-email-action-items/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-email-action-items/checklists/: requirements.md
specs/007-email-action-items/contracts/: email-service.md
specs/008-passive-speech-reprocess/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-claude-query-mode/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-platform-tts/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/ara/: __init__.py  __main__.py
src/ara/activities/: __init__.py  (+3 more)
tests/: __init__.py
tests/benchmark/: __init__.py  test_e2e_latency.py  test_llm_latency.py  test_query_latency.py  test_stt_latency.py
tests/contract/: test_claude_storage.py
tests/integration/: __init__.py  test_activity_flow.py  test_ci_mock.py  test_claude_flow.py  test_countdown_flow.py  test_email_flow.py  test_interrupt_flow.py  test_logging.py  test_mode_switch.py  test_mongodb_integration.py  test_note_flow.py  test_online_flow.py  test_personality.py  test_platform_parity.py  test_platform_tts.py  test_reminder_flow.py  test_routing_flow.py  test_time_query_flow.py  test_timer_flow.py  test_voice_loop.py
tests/unit/: __init__.py  test_activity_tracker.py  test_audio.py  test_categorizer.py  test_claude_client.py  test_claude_handler.py  test_claude_intent.py  test_claude_session.py  test_cloud_llm.py  test_config.py  test_countdown.py  test_daily_digest.py  test_elevenlabs_synthesizer.py  test_email_config.py  test_email_sender.py  test_event_extraction.py  test_extractor.py  test_insights.py  test_intent.py  test_interaction.py  test_interrupt.py  test_llm.py  test_macos_synthesizer.py  test_mode.py  test_network.py  test_personality_responses.py  test_platform_detection.py  test_query_router.py  test_reminder.py  test_reminder_cancel.py  test_reminder_clear.py  test_reminder_formatting.py  test_reminder_persistence.py  test_reminder_time_format.py  test_search.py  test_stop_keyword.py  test_storage.py  test_storage_client.py  test_stt.py  test_summary.py  (+7 more)
(+90 files in other folders)
